[package]
name = "alice-energy"
version = "0.1.0"
edition = "2021"
authors = ["Moroya Sakamoto <sakamoro@alicelaw.net>"]
description = "ALICE-Energy — Deterministic power grid simulation, phase synchronization, battery degradation prediction"
license = "AGPL-3.0-only"
repository = "https://github.com/ext-sakamoro/ALICE-Energy"

[dependencies]
rayon = "1.10"

[lib]
name = "alice_energy"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
